@@ -3,10 +3,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.awt.*;
-import java.awt.event.MouseEvent;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
+
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -16,30 +14,13 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 public class GamePanelTest {
 
-    private gamePanel gp;
-
     /**
      * Sets up a fresh {@code gamePanel} instance and starts a new game before each test.
      */
     @BeforeEach
     public void setUp() {
-        gp = new gamePanel();        // create new game panel instance
+        gamePanel gp = new gamePanel();        // create new game panel instance
         gp.startNewGame();           // initialize default game state
-    }
-
-    /**
-     * Verifies that {@link gamePanel#buildSaveData()} correctly captures the player's data
-     * (position and life) into the returned {@link SaveData} object.
-     */
-    @Test
-    public void testBuildSaveData_containsPlayerData() {
-        SaveData saveData = gp.buildSaveData(); // create save data
-
-        assertNotNull(saveData, "SaveData should not be null");
-        assertNotNull(saveData.player, "Player data should not be null");
-        assertTrue(saveData.player.life > 0, "Player should have life greater than 0");
-        assertEquals(gp.player.worldX, saveData.player.worldX, "Player X position must match");
-        assertEquals(gp.player.worldY, saveData.player.worldY, "Player Y position must match");
     }
 
     /**
@@ -68,7 +49,7 @@ public class GamePanelTest {
     @Test
     public void testSetMonster_spawnsCorrectBoss() {
         gamePanel gp = new gamePanel();
-        gp.tileH.walkableRegions.add(Arrays.asList(new Point(1, 1)));
+        gp.tileH.walkableRegions.add(List.of(new Point(1, 1)));
         gp.assetSetter = new AssetSetter(gp);
 
         gp.currentMap = 0;
@@ -80,25 +61,6 @@ public class GamePanelTest {
         gp.assetSetter.setMonster();
         assertNotNull(gp.monster[1][0], "Boss_Eye should be spawned on map 1");
         assertEquals("Boss_Eye", gp.monster[1][0].getClass().getSimpleName());
-    }
-
-    /**
-     * Verifies that {@link ChestInventoryManager#getChestData(int, Map)} initializes
-     * a chest with the expected items and quantities.
-     */
-    @Test
-    public void testGetChestData_correctItemsAdded() {
-        ChestInventoryManager manager = new ChestInventoryManager();
-
-        Map<String, Integer> items = new HashMap<>();
-        items.put("Apple", 2);
-        items.put("potion", 1);
-
-        ChestInventoryManager.ChestData chest = manager.getChestData(1, items);
-
-        assertFalse(chest.isOpen(), "New chest should start closed");
-        assertEquals(2, chest.getItems().size(), "Chest should contain two entries");
-        assertEquals("Apple", chest.getItems().get(0).getName(), "First item name must be 'Apple'");
     }
 
 }
